<resources>
    <string name="app_name">FilmTag</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="label_film_type">Film Type</string>
    <string name="label_film_exposed_at">Exposed at ISO</string>
    <string name="label_film_frames">Number of Frames</string>
    <string name="action_create">Create</string>
    <string name="err_parsing_failed">Parsing numeric value failed</string>
    <string name="msg_delete_complete_film_roll">Delete complete film roll? All frames data will be lost.</string>
    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_frame_number">Frame Number</string>
    <string name="label_frame_shutter">Shutterspeed</string>
    <string name="label_film_aperture">Aperture</string>
    <string name="label_frame_notes">Notes</string>
    <string name="action_update">Update</string>
    <string name="label_notes_for_film">Your notes for this film</string>
    <string name="label_notes_for_frame">Your notes for this frame</string>
    <string name="label_no_notes">No notes</string>
    <string name="err_missing_data">Data incomplete</string>
    <string name="info_data_imported">Data imported</string>
    <string name="err_import_failed">Data import failed</string>
    <string name="label_ok">OK</string>
    <string name="action_export">Export</string>
    <string name="action_import">Import</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_about">About</string>
    <string name="label_film_developed">Film developed</string>
    <string name="action_search">Search</string>
    <string name="action_camera">Camera</string>
    <string name="label_preview">Preview</string>
    <string name="error_creating_image">Failed to create image</string>
    <string name="label_location">Location</string>
    <string name="action_location">Update</string>
    <string name="err_location_disabled">Location provider not available</string>
    <string name="label_roll_speed">Exposed at ISO</string>
    <string name="label_roll_frames">frames</string>
    <string name="label_frame">Frame</string>
    <string name="label_aperture">Aperture</string>
    <string name="label_shutter">Shutterspeed</string>
    <string name="action_settings">Settings</string>

    <string name="pref_title_default_values">Preferred default values</string>
    <string name="pref_summary_default_iso">The default prefilled value for film speed when creating new film entries</string>
    <string name="pref_title_default_iso">Default Film Speed</string>
    <string name="pref_summary_default_frames">The default prefilled value for the number of frames when creating new film entries</string>
    <string name="pref_title_default_frames">Default # Frames</string>
    <string name="pref_summary_default_shutter">The default prefilled value for the shutter speed when editing frames</string>
    <string name="pref_title_default_shutter">Default Shutterspeed</string>
    <string name="pref_summary_default_aperture">The default prefilled value for aperture when editing frames</string>
    <string name="pref_title_default_aperture">Default Aperture</string>
    <string name="label_frame_tags">Tags</string>
    <string name="label_tags_for_film">landscape sunset</string>
    <string name="long_exposure">long exposure</string>
    <string name="no_rolls_yet">You have no rolls yet, use the plus icon to create some entries.</string>
    <string name="label_date_taken">Date</string>
    <string name="select_date">Select Date</string>
    <string name="label_cancel">Cancel</string>
    <string name="option_roll_delete">Delete</string>
    <string name="option_roll_lock">Lock</string>
    <string name="option_roll_unlock">Unlock</string>
    <string name="msg_lock_complete_film_roll">Once a roll is developed you can lock/unlock it here from future edits.</string>
    <string name="indicates_if_roll_is_developed_or_not">indicates if roll is developed or not</string>
    <string name="msg_first_view_help">This is an overview of your film rolls. You can add new ones with the plus icon in the top menu.\n\nEditing existing rolls is done by selecting one from the list. Long press on an item allows quick lock/unlock of rolls.\n\nUse the \"Share\" or \"Send\" option from other apps to import data back into this app.</string>
    <string name="action_lock_or_unlock">(un)Lock</string>
    <string name="msg_roll_is_locked">Roll is locked, unlock it first before you can store your changes.</string>
    <string name="description_locked_unlocked">Locked or unlocked indication</string>
    <string name="action_close">Close</string>
    <string name="msg_confirm_update_location">Update to current location?</string>
    <string name="pref_title_limit_notes_length">Limit notes preview length (empty is no limit)</string>
    <string name="msg_confirm_share_text_or_config">Do you want to share all film rolls in a readable format or for backup in a technical format?</string>
    <string name="option_export_technical">Technical</string>
    <string name="option_export_readable">Readable</string>
    <string name="flash_exposure">Flash exposure</string>
    <string name="label_date">Date: %1$s</string>
    <string name="label_time">Time: %1$s</string>
    <string name="select_time">Select time</string>

</resources>
