<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- search option used for filtering in list -->
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        android:actionViewClass="android.widget.SearchView"
        android:title="@string/action_search"/>

    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        app:showAsAction="withText|ifRoom" />

    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>