<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/label_frame_number"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/header_frame"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="36" />

    <TextView
        android:id="@+id/edit_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_date_taken"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:padding="5dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_shutter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/label_frame_shutter"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/long_exposure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_frame" />

    <CheckBox
        android:id="@+id/long_exposure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/long_exposure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_frame" />

    <EditText
        android:id="@+id/edit_shutter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="200"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_shutter" />

    <TextView
        android:id="@+id/label_aperture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/label_film_aperture"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_shutter" />

    <EditText
        android:id="@+id/edit_aperture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="2.8"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_aperture" />

    <TextView
        android:id="@+id/label_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/label_frame_tags"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_aperture" />

    <EditText
        android:id="@+id/edit_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_tags_for_film"
        android:lines="1"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_tags" />

    <TextView
        android:id="@+id/label_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/label_frame_notes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_tags" />

    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/label_notes_for_frame"
        android:lines="6"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_notes" />

    <TextView
        android:id="@+id/text_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/label_location"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_notes" />

    <ImageView
        android:id="@+id/image_location_indicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_device_gps_silver"
        app:layout_constraintStart_toEndOf="@+id/text_location"
        app:layout_constraintTop_toBottomOf="@id/edit_notes" />

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_below="@+id/text_location"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_location" />

</androidx.constraintlayout.widget.ConstraintLayout>