<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_film_type"
        android:textSize="20sp"
        android:padding="5dp"
        android:fontFamily="sans-serif-light"
        />

    <EditText
        android:id="@+id/edit_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Kodak NC 400"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_film_exposed_at"
        android:textSize="20sp"
        android:padding="5dp"
        android:fontFamily="sans-serif-light"
        />

    <EditText
        android:id="@+id/edit_exposed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="200"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_film_frames"
        android:textSize="20sp"
        android:padding="5dp"
        android:fontFamily="sans-serif-light"
        />

    <EditText
        android:id="@+id/edit_frames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="36"
        android:inputType="number"
        />


</LinearLayout>